test(server): verify Linux PID1 Git completion
Exercise retained zombie and live descendants through the production Git executor, require helper completion, and preserve bounded namespace cleanup evidence. Run the exact regression on JVM and native images with strict native XML reporting.

Signed-off-by: luinstra <luinstra@gmail.com>